# notifications_sprint_1

./: .gitattributes  .gitignore  README.md  docker-compose.override.yaml  docker-compose.yml
.github/workflows/: main.yml
airflow/: docker-compose.yaml
airflow/dags/: .env.example  jwt_add.py  send_news.py
generator_events/: events.py  generate_to_db.py  jwt.py  jwt_token.py  scheduler.py  send_notification.py  send_to_ugc.py
generator_events/test_utils/: utils.py
mock_api/: .env.example  Dockerfile  pyproject.toml  setup.cfg
mock_api/src/: main.py
mock_api/src/api/v1/: healthcheck.py  mock.py
mock_api/src/core/: config.py
nginx/: nginx.conf
notification_service/: .env.example  Dockerfile.event_worker  entrypoint.sh  pyproject.toml  setup.cfg
notification_service/src/: main.py
notification_service/src/api/v1/: notification.py
notification_service/src/core/: config.py  constants.py  logger.py
notification_service/src/db/: mongo.py  rabbitmq.py
notification_service/src/event_worker/: main.py  rabbitmq.py  settings.py
notification_service/src/models/: etc.py  event.py  notification.py  profile.py
notification_service/src/services/: event.py  notification.py  template.py
notification_service/src/templates/: new_user.html  series__email.jinja  series__websocket.jinja
notification_service/src/tests/: conftest.py  docker-compose.override.yaml  docker-compose.yml
notification_service/src/tests/functional/: test_notification.py
notification_service/src/tests/utils/: jwt_token.py
notification_service/src/utils/: jwt_and_services.py  services_constant.py
scheduler_worker/: .env.example  Dockerfile.scheduler_worker  main.py  pyproject.toml  settings.py
scheduler_worker/src/: models.py
scheduler_worker/src/core/: logger.py
scheduler_worker/src/database/: rabbitmq.py
scheduler_worker/src/services/: check_notification.py  send_notification_to_queue.py
sender_worker/: .env.example  Dockerfile  pyproject.toml
sender_worker/src/: config.py  logger.py  main.py  models.py  rabbitmq.py  sender.py
