[tool.poetry]
name = "notification-service"
version = "0.1.0"
description = "Notification service for online cinema"
authors = ["Python team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = { extras = ["standard"], version = "^0.112.0" }
orjson = "^3.10.6"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
uvicorn = "^0.30.5"
aiormq = "^6.8.0"

[tool.poetry.group.prod]
optional = true

[tool.poetry.group.prod.dependencies]
gunicorn = "^22.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]
